--- a/saga-orchestration/docker-compose.yml
+++ b/saga-orchestration/docker-compose.yml
@@ -70,7 +70,7 @@ services:
 #      - SPRING_DATASOURCE_PASSWORD=secret123
 #      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     networks:
-      - saga
+      - saga1
 
   inventoryservice:
     image: arunkumarshahi/inventoryservice
@@ -85,7 +85,7 @@ services:
 #      - SPRING_DATASOURCE_PASSWORD=secret123
 #      - SPRING_JPA_HIBERNATE_DDL_AUTO=update
     networks:
-      - saga
+      - saga1
 
   orchestrationservice:
     image: arunkumarshahi/orchestrationservice
@@ -106,3 +106,5 @@ services:
 networks:
   saga:
     name: custom_frontend
+  saga1:
+    name: custom_frontend1
